# flowdrop-cli

./: .gitignore  .gitmodules  CMakeLists.txt  LEGAL  LICENSE  README.md
cmake/: version.cmake
docs/: building-linux-amd64.md  building-linux-arm64.md  building-linux.md  building-mac.md  building-win.md
flowdrop-cli/: CMakeLists.txt  fetch_device_info.cpp  fetch_device_info.hpp  find.cpp  find.hpp  format_util.cpp  format_util.hpp  main.cpp  main.hpp  receive.cpp  receive.hpp  send.cpp  send.hpp  simple_device_info.hpp  simple_device_info_linux.cpp  simple_device_info_macos.cpp  simple_device_info_windows.cpp
flowdrop-cli/Resources/: app.rc.in
flowdrop-cli/SourceFiles/: find.cpp  format_util.cpp  format_util.hpp  main.cpp  main.hpp  os_util.cpp  os_util.h  receive.cpp  send.cpp
redist/: LICENSE  README.md
simpledeviceinfo/: CMakeLists.txt
simpledeviceinfo/include/: simpledeviceinfo.hpp
simpledeviceinfo/src/: linux.cpp  macos.cpp  macos_obj.mm  windows.cpp
